--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "vue": "^2.5.2",
+    "vue-lottie": "^0.2.1",
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
@@ -55,6 +56,7 @@
     "karma-sourcemap-loader": "^0.3.7",
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
+    "lodash": "^4.17.10",
     "mocha": "^3.2.0",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.9.0",
@@ -73,6 +75,7 @@
     "sinon-chai": "^2.8.0",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-cookies": "^1.5.6",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
     "vue-template-compiler": "^2.5.2",
