--- a/entrysystem-backend/src/main/resources/application.properties
+++ b/entrysystem-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.url=jdbc:mysql://localhost:3306/entry?useSSL=false
 spring.datasource.username=root
-spring.datasource.password=1234
+spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 server.port=8080
