--- a/entrysystem-backend/build.gradle
+++ b/entrysystem-backend/build.gradle
@@ -26,10 +26,13 @@ repositories {
 
 dependencies {
     compile group: 'org.springframework.security', name: 'spring-security-core', version: '4.2.3.RELEASE'
-    compile('org.springframework.boot:spring-boot-configuration-processor:true')
-    compile 'org.springframework.boot:spring-boot-starter-mail:1.4.3.RELEASE'
+    compile ('org.springframework.boot:spring-boot-starter-mail:1.4.3.RELEASE')
     compile('org.modelmapper:modelmapper:0.7.8')
     compile('com.auth0:java-jwt:2.1.0')
+    compile ('io.springfox:springfox-swagger2:2.7.0')
+    compile('io.springfox:springfox-swagger-ui:2.7.0')
+    compile('redis.clients:jedis')
+    compile("org.springframework.boot:spring-boot-starter-data-redis")
     compile('org.springframework.boot:spring-boot-starter-data-jpa')
     compile('org.springframework.boot:spring-boot-starter-data-rest')
     compile('org.springframework.boot:spring-boot-starter-web')
