--- a/entrysystem-backend/src/main/resources/application.properties
+++ b/entrysystem-backend/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.password=
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
 server.port=8080
+jwt.prefix=JWT 
 issuer=TEST_ISSUER
 clientId=TEST_ID
 redisTable=BLACK_LIST
