--- a/entrysystem-backend/src/main/resources/application.properties
+++ b/entrysystem-backend/src/main/resources/application.properties
@@ -1,19 +1,18 @@
-#spring.jpa.hibernate.ddl-auto=create-drop
-spring.datasource.url=jdbc:mysql://localhost:3306/entry?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
 spring.jpa.show-sql=true
+spring.profiles.active=local
 server.port=8080
 jwt.prefix=JWT\u0020
-issuer=TEST_ISSUER
-clientId=TEST_ID
+jwt.issuer=TEST_ISSUER
+jwt.clientId=TEST_ID
+jwt.exp=7200
+jwt.refreshExp=604800
+jwt.secret=${ENTRY_JWT_SECRET:secret1234}
 redisTable=BLACK_LIST
-exp=7200
-refreshExp =604800
+url=${ENTRY_SERVER_URL:localhost:8080}
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=TEST_EMAIL
-spring.mail.password=TEST_PASSWORD
+spring.mail.username=${ENTRY_MAIL_USERNAME}
+spring.mail.password=${ENTRY_MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+logging.config=classpath:logback-${spring.profiles.active}.xml
