TOASTR추가, 학교 검색 지역 유효성 검사 기능 추가
classify에서 선택한 지역과 선택한 학교의 지역이 다를 경우 경고알림

--- a/entry-frontend/package.json
+++ b/entry-frontend/package.json
@@ -16,7 +16,8 @@
     "initialize-css": "^1.4.0",
     "vue": "^2.5.2",
     "vue-lottie": "^0.2.1",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "vue-toastr": "^2.0.14"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
